syntax = "proto3";

package user;
option go_package = "./proto/user";

// User Management Service
service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);
}

// List Users
message ListUsersRequest {
  string name_filter = 1;
  string email_filter = 2;
  int32 page = 3;
  int32 limit = 4;
}

message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string role = 5;
  string created_at = 6;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 total_pages = 5;
}

// Get Profile
message GetProfileRequest {
  string user_id = 1;
}

message GetProfileResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

// Update Profile
message UpdateProfileRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message UpdateProfileResponse {
  bool success = 1;
  string message = 2;
}

// Delete Profile
message DeleteProfileRequest {
  string user_id = 1;
}

message DeleteProfileResponse {
  bool success = 1;
  string message = 2;
}